src/snapshots/cornercase__ui__tests__tab_context__renders_codex_without_a_percentage_in_the_compact_layout.snap
---
source: src/ui.rs
expression: "render_sized(&view, SMALL.width, SMALL.height).backend()"
---
"                                                                                "
"   ≡     shop › login › codex                                        ☐      ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" ‹ projects    shop                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"  login                                                                      ×  "
"                                                                                "
"                                                                                "
"  ▌ codex                                                                    ×  "
"    gpt-5.4-mini                                                                "
"                                                                                "
"    nvim                                                                     ×  "
"                                                                                "
"                                                                                "
"    + tab                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"  + new workspace                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
