src/snapshots/cornercase__ui__tests__tab_context__renders_the_model_and_the_context_under_the_tab.snap
---
source: src/ui.rs
expression: render(&with_context(opus(17))).backend()
---
" ▄▀▀▀ cornercase                                         │  no tab open                             "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ shop (1)                     │  login                  │                                          "
"                               │  ▌ ◐ claude             │                                          "
"  + new project                │      Opus 5.5 · 17%     │                                          "
"                               │    nvim                 │                                          "
"                               │    + tab                │                                          "
"                               │                         │                                          "
"                               │  + new workspace        │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
